# ctxbench-cli

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  experiment.baseline.json  experiment.full.json  experiment.json  experiment.minimal.json  experiment.reduced.json  experiment.tool-refactor.json  flake.nix  outputs_analysis.ipynb  pyproject.toml  pytest.ini
.specify/: integration.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  codex.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-lite-template.md  plan-template.md  spec-lite-template.md  tasks-template.md  usage-entry-template.json  worklog-template.md
.specify/workflows/: workflow-registry.json
datasets/: questions.istance.json  questions.json
datasets/lattes/: experiment.json  questions.instance.json  questions.json
docs/architecture/: README.md  artifact-contracts.md  cli-architecture.md  component.md  container.md  deployment.md  dynamic.md  system-context.md  vocabulary.md  workflow.md
docs/datasets/: creating-a-dataset.md  using-external-datasets.md
docs/development/: spec-workflow.md  usage-log.md
examples/basic/: experiment.json
examples/datasets/: experiment.json  experiment.simple.json
specs/001-command-model-phase-renaming/: baseline.after.txt  baseline.before.txt  data-model.md  follow-ups.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-artifact-contracts/: plan.md  research.md  spec.md  tasks.md  usage.jsonl  worklog.md
specs/003-dataset-distribution/: descriptor.example.json  plan.md  quickstart.md  simplified-fetch-ux.md  spec.md  tasks.md  (+1 more)
tests/: __init__.py  test_ai.py  test_artifact_contracts.py  test_cli.py  test_dataset_archive_fetch.py  test_dataset_archive_safety.py  test_dataset_cache.py  test_dataset_conflicts.py  test_dataset_descriptor.py  test_dataset_distribution_workflow.py  test_dataset_fetch.py  test_dataset_inspect.py  test_dataset_local_package.py  test_dataset_manifest_discovery.py  test_dataset_package_contract.py  test_dataset_provenance_artifacts.py  test_dataset_resolver.py  test_eval_status_regression.py  test_fake_dataset_workflow.py  test_lattes_dataset_conformance.py  test_lattes_dataset_package.py  test_lattes_local_function.py  test_lattes_mcp.py  test_lattes_sections.py  test_legacy_rejection.py  test_lifecycle_no_network.py  test_model_schemas.py  test_util_artifacts.py
(+298 files in other folders)
