[project]
name = "ctxbench"
version = "0.1.0"
description = "Strict uv + Nix (uv2nix) template"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "requests>=2.31",
  "jsonschema>=4.22",
  "pydantic>=2.7",
  "fastmcp>=3.2.0",
  "openai>=2.30.0",
  "google-genai>=1.70.0",
  "anthropic>=0.89.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
ctxbench = "ctxbench.cli:main"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.uv.sources]
specify-cli = { git = "https://github.com/github/spec-kit.git", rev = "v0.8.7" }

[tool.uv.extra-build-dependencies]
specify-cli = ["hatchling"]

[dependency-groups]
dev = [
    "debugpy>=1.8.20",
    "jupyter>=1.1.1",
    "lab>=8.9",
    "numpy>=2.4.4",
    "openai>=2.30.0",
    "pandas>=3.0.2",
    "specify-cli",
]
